<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alarm App</string>
    <string name="action_settings">Settings</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="code_words">Codewords</string>
    <string name="sensor_setup">Sensor Setup</string>
    <string name="help_fn">Help</string>
    <string name="bear_desc">Childrens Hospital Westmead Bear</string>
    <string name="title_activity_alarm_handler">AlarmHandler</string>
    <string name="hello_world">Hello world!</string>

</resources>
