<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/iBear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bAlarm"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/bear_desc"
        android:src="@drawable/bear" />

    <Button
        android:id="@+id/bAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bCode"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:onClick="setAlarm"
        android:text="@string/set_alarm" />

    <Button
        android:id="@+id/bCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:onClick="setCodewords"
        android:text="@string/code_words" />

    <Button
        android:id="@+id/bSensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bHelp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:onClick="setupSensor"
        android:text="@string/sensor_setup" />

    <Button
        android:id="@+id/bHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:onClick="sendHelp"
        android:text="@string/help_fn" />

</RelativeLayout>